few cosmetic changes

--- a/sections/personal/gdpr.pug
+++ b/sections/personal/gdpr.pug
@@ -31,8 +31,9 @@ html
 
     include header
     include navbar
-   
-    h1 still to be done: you should be capable of of:
-    ol
-        li: refresh your access token
-        li: remove the data you submit (for this, you should email support@tracking.exposed, and we'll provide you a log of the deleted information)
+  
+    .container 
+        h1 still to be done: you should be capable of of:
+        ol
+            li: refresh your access token
+            li: remove the data you submit (for this, you should email support@tracking.exposed, and we'll provide you a log of the deleted information)
