--- a/sections/personal/stats.pug
+++ b/sections/personal/stats.pug
@@ -32,5 +32,5 @@ html
     include header
     include navbar
 
-    .container-fluid
-        h2 Nope, work in progress
+    .container
+        h2 Nope: work in progress
