--- a/sections/personal/specs.pug
+++ b/sections/personal/specs.pug
@@ -32,7 +32,7 @@ html
     include header
     include navbar
 
-    .container-fluid
+    .container
         h2 Download your data in CSV
         p
             a(href="" onclick="downloadCSV()") last 1000 samples collected by you
