token can be seen with easy

--- a/sections/personal/gdpr.pug
+++ b/sections/personal/gdpr.pug
@@ -27,13 +27,18 @@ html
 
     script(type='text/javascript', charset='utf8', src='/js/local/summary.js')
 
-  body(onload="initializeSummary()")
+  body(onload="initializeToken()")
 
     include header
     include navbar
   
     .container 
-        h1 still to be done: you should be capable of of:
+        h1 Control panel
+        p
+            i We are still working in making this interface robust and compliant for your needs.
         ol
-            li: refresh your access token
-            li: remove the data you submit (for this, you should email support@tracking.exposed, and we'll provide you a log of the deleted information)
+            li Your access token is:  
+               span.monospace#token [javascript should load your token here|look at the 40 byte hash in the URL]
+               |.
+            li remove the data you submit [at the moment, to do this, you should email support@tracking.exposed providing your authentication token, and we'll provide you a log of the deleted information]
+            li visual feedback on how the data retention policy delete the data you submitted, and let you control this conservation time.
