--- a/sections/404.pug
+++ b/sections/404.pug
@@ -13,16 +13,21 @@ html
 
   body
 
-    .container.center
+    .container
         include navbar
-        h1 Page not found! 
 
-        h3 If you found a broken link, please consider reporting it to 
+    .container.center
+        h1 Page not found! 
+        p also, maybe it is our fault, we are updating the system and some links still point at the wrong location.
+
+        p please consider reporting it to 
             a(href="https://www.facebook.com/personalizationalgorithm") our Facebook page
             |, or in the developer 
             a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") chat
             |.
-        p This, because we exclude you don't use github. If is the case, this is our AGPL licensed  
-            a(href="https://github.com/tracking-exposed/facebook") repository
-            | ;)
+
+        p 
+            i ... we exclude you use github, but, If it is the case, feel free to open an issue in 
+                a(href="https://github.com/tracking-exposed/facebook") repository
+                | (AGPL license).
 
