--- a/sections/personal/gdpr.pug
+++ b/sections/personal/gdpr.pug
@@ -38,7 +38,9 @@ html
             i We are still working in making this interface robust and compliant for your needs.
         ol
             li Your access token is:  
-               span.monospace#token [javascript should load your token here|look at the 40 byte hash in the URL]
-               |.
-            li remove the data you submit [at the moment, to do this, you should email support@tracking.exposed providing your authentication token, and we'll provide you a log of the deleted information]
-            li visual feedback on how the data retention policy delete the data you submitted, and let you control this conservation time.
+                span.monospace#token [javascript should load your token here|look at the 40 byte hash in the URL]
+                |, and you can use it with our 
+                a(href="https://github.com/tracking-exposed/dashboard") analytic dashboard
+                |.
+            li Remove the data you submit [at the moment, to do this, you should email support@tracking.exposed providing your authentication token, and we'll provide you a log of the deleted information]
+            li Visual feedback: we have a data retention policy which deletes the data you submitted, you should see it, be capable to deciding the conservation time.
