managing error in revision page

--- a/sections/revision/revision.pug
+++ b/sections/revision/revision.pug
@@ -30,7 +30,7 @@ html
             include ../navbar
 
         .container-fluid
-            table
+            table#fulltable
                 thead
                     tr
                         td
