--- a/styles/summary.styl
+++ b/styles/summary.styl
@@ -127,3 +127,11 @@ $before(text)
   height: 400px
 .grid-item--height-auto
   height: auto
+
+
+/* used in the 'stats' table */
+.timeline
+  background #ffffe0
+  width 100%
+  font-size 0.8em
+  text-align center
