--- a/sections/personal/stats.pug
+++ b/sections/personal/stats.pug
@@ -34,6 +34,9 @@ html
 
     .container
         p Your timelines by the most recent
+        p(class="alert-warning") we are experiencing a bug; most of the posts are marked as 
+            i sponsored
+            |  even if they are not
         table.table
           thead
             tr
@@ -43,4 +46,4 @@ html
               th info
           tbody#entries
 
-
+        #closing
