--- a/styles/summary.styl
+++ b/styles/summary.styl
@@ -135,3 +135,12 @@ $before(text)
   width 100%
   font-size 0.8em
   text-align center
+  border-top: 2px black solid;
+
+.closing
+  text-align center
+  element-align center
+  item-align center
+
+.private
+  text-color grey;
