fixed a bug in loud API and fixed 404 page

--- a/sections/404.pug
+++ b/sections/404.pug
@@ -12,7 +12,6 @@ html
     title 404
 
   body
-
     .container
         include navbar
 
@@ -24,10 +23,15 @@ html
             a(href="https://www.facebook.com/personalizationalgorithm") our Facebook page
             |, or in the developer 
             a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") chat
-            |.
+            |, or drop an email at
+            b  support
+            | @
+            b  tracking
+            | <dot>
+            b  exposed
 
         p 
-            i ... we exclude you use github, but, If it is the case, feel free to open an issue in 
-                a(href="https://github.com/tracking-exposed/facebook") repository
-                | (AGPL license).
+            i ... this, by excluding you are using github. If is it the case, feel free to open an issue in the 
+                a(href="https://github.com/tracking-exposed/facebook") fbTREX backend
+                |  repository (AGPL license).
 
