--- a/sections/webscripts/rss.css
+++ b/sections/webscripts/rss.css
@@ -2,3 +2,20 @@
     margin: 2em;
     border: 1em;
 }
+
+.labelv {
+   font-weight: 600; 
+}
+
+button {
+    width: 12%;
+}
+
+.ui-autocomplete {
+    max-height: 400px;
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+    /* add padding to account for vertical scrollbar */
+    padding-right: 20px;
+}
