great refactor at RSS logic

--- a/sections/rss.pug
+++ b/sections/rss.pug
@@ -37,7 +37,7 @@ html
                 a(href="https://dandelion.eu") dandelion.eu
                 |.
             li Select one of the wikipedia 
-                a(href="howdoesitworks") voices matched in the last 7 days
+                a(href="/fbtrexRSS") voices matched in the last 7 days
                 |.
             li Copy-Paste the RSS feed and subscribe using one of the many RSS readers
 
