--- a/sections/fbtrexRSS.pug
+++ b/sections/fbtrexRSS.pug
@@ -20,17 +20,17 @@ html
         p A very experimental feature!
 
     .container
-        h2 How does it work and what might not properly function
+        h2 How does it work, and what might not work
         ol
-            li All the supporters with the browser extension installed, observe public posts
+            li All the supporters that have the browser extension installed observe public posts;
             li we pass the text observed to our partner: 
-                a(href="https://dandelion.eu") dandelion.eu
-            li Dandelion analyzed the text and try to discover which wikipedia pages are related to it. For example, if someone mention "we can talk on hangout" Dandelion would recognize "Google", because hangout chat is a Google product (you shouldn't use it!)
-            li These keywors are called "topics", and you can subscrive to said topics
-            li The RSS post is composed based on the metadata we sucessfully extract from Facebook posts, and this might have some problem, that's why you might see this page.
+                a(href="https://dandelion.eu") dandelion.eu;
+            li Dandelion analyzes the text and tries to discover which wikipedia pages are related to it. For example, if someone mentions "we can talk on hangout" Dandelion would recognize "Google" -- because Hangouts is a Google product (and you shouldn't use it!)
+            li These keywords are called "topics", and you choose which ones you want to subscribe to;
+            li The RSS post is composed based on the metadata we successfully extract from Facebook posts. This might have some problems, that's why you might see this page.
 
     .container.center
-        h2 it is an experimental feature
+        h2 It is an experimental feature
         h3 meant to turn upside down the algorithm and watch event horizonatally
         p And we are working to improve it, as 
             a(href="https://github.com/tracking-exposed/facebook") free software project
