I will keep using the wrong -s in English, yay

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -10,7 +10,7 @@ block navbar
         li.nav-item
           a.nav-link(href='/initiatives/') Publications & Talks
         li.nav-item
-          a.nav-link(href='/privacy-statement') What we collects and why
+          a.nav-link(href='/privacy-statement') What we collect and why
         li.nav-item
           a.nav-link(href='/project') Know more
         li.nav-item
