fix a naming bug IHDFU

--- a/sections/statistics/index.pug
+++ b/sections/statistics/index.pug
@@ -69,7 +69,7 @@ html
                             th.col-sm-1
                                 span#accesses
                             th.col-sm-1
-                                span#summaries
+                                span#summary
                             th.col-sm-1
                                 span#aggregated
                     tfoot
@@ -86,7 +86,7 @@ html
                             th.col-sm-1
                                 span#accesses_lw
                             th.col-sm-1
-                                span#summaries_lw
+                                span#summary_lw
                             th.col-sm-1
                                 span#aggregated_lw
 
